--- a/manifest.json
+++ b/manifest.json
@@ -3,18 +3,23 @@
   "name": "Gestão Quiosque Estrela do Mar",
   "icons": [
     {
-      "src": "https://cdn-icons-png.flaticon.com/512/616/616554.png",
-      "sizes": "192x192",
-      "type": "image/png"
+      "src": "/logo.svg",
+      "sizes": "any",
+      "type": "image/svg+xml"
     },
     {
-      "src": "https://cdn-icons-png.flaticon.com/512/616/616554.png",
+      "src": "/logo.svg",
+      "sizes": "192x192",
+      "type": "image/svg+xml"
+    },
+    {
+      "src": "/logo.svg",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/svg+xml"
     }
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#f43f5e",
-  "background_color": "#fff1f2"
+  "theme_color": "#0f4c81",
+  "background_color": "#f0f9ff"
 }
