--- a/manifest.json
+++ b/manifest.json
@@ -3,19 +3,19 @@
   "name": "Gestão Quiosque Estrela do Mar",
   "icons": [
     {
-      "src": "/logo.svg?v=5",
+      "src": "/starfish-icon.svg",
       "sizes": "any",
       "type": "image/svg+xml",
       "purpose": "any maskable"
     },
     {
-      "src": "/logo.svg?v=5",
+      "src": "/starfish-icon.svg",
       "sizes": "192x192",
       "type": "image/svg+xml",
       "purpose": "any maskable"
     },
     {
-      "src": "/logo.svg?v=5",
+      "src": "/starfish-icon.svg",
       "sizes": "512x512",
       "type": "image/svg+xml",
       "purpose": "any maskable"
